fixed/added align items in header

--- a/html-css/module-10/css/common/common.css
+++ b/html-css/module-10/css/common/common.css
@@ -1,5 +1,7 @@
 /* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.26, autoprefixer: v9.7.3) */
 
+/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.26, autoprefixer: v9.7.3) */
+
 /* Global settings "START" */
 *,
 *::before,
@@ -36,9 +38,9 @@
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+            -webkit-box-align: baseline;
+                -ms-flex-align: baseline;
+                    align-items: baseline;
     padding-top: 40px;
 }
 .page-navigation__menu-nav {
